[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bearing-fault-detection-fl"
version = "1.0.0"
description = "Federated Learning for Bearing Fault Detection using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "torch==2.6.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "rluca"

[tool.flwr.app.components]
serverapp = "flower_app.server_app:app"
clientapp = "flower_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
fraction-fit = 0.5
local-epochs = 10
dirichlet-alpha = 0.1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.gpu-sim]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 6
options.backend.client-resources.num-gpus = 1